--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -6,6 +6,9 @@ USE_UPNP:=0
 
 DEFS=-DUSE_IPV6 -DBOOST_SPIRIT_THREADSAFE
 
+BOOST_LIB_PATH=/usr/local/lib
+BOOST_INCLUDE_PATH=/usr/local/lib/boost
+
 DEFS += $(addprefix -I,$(CURDIR) $(CURDIR)/obj $(BOOST_INCLUDE_PATH) $(BDB_INCLUDE_PATH) $(OPENSSL_INCLUDE_PATH))
 LIBS = $(addprefix -L,$(BOOST_LIB_PATH) $(BDB_LIB_PATH) $(OPENSSL_LIB_PATH))
 
